app/frontend/static/css/index.css
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

#main {
    position: fixed;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
}

#app {
    width: 100%;
    height: 100%;
    display: flex;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

.honeycomb {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    justify-content: center;
    align-items: center;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0;
    transform: translateY(34.375px);
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}

.honeycomb-cell {
    flex: 0 1 250px;
    max-width: 20vw;
    max-height: 145px;
    height: 12vw;
    margin: 5% 12.5px 25px;
    position: relative;
    padding: 0.5em;
    text-align: center;
    z-index: 1;
}

.honeycomb-cell.mid-first {
    margin-left: 10%;
}

.honeycomb-cell.mid-last {
    margin-right: 10%;
}


.honeycomb-cell__title {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    -webkit-hyphens: auto;
        -ms-hyphens: auto;
            hyphens: auto;
    word-break: break-word;
    text-transform: uppercase;
    color: #fff;
    font-weight: 700;
    font-size: 1.75em;
    transition: opacity 350ms;
}

.honeycomb-cell__title > small {
    font-weight: 300;
    margin-top: 0.25em;
}

.honeycomb-cell__image {
    -o-object-fit: cover;
    object-fit: cover;
    -o-object-position: center;
    object-position: center;
}

.honeycomb-cell::before, .honeycomb-cell::after {
    content: "";
}

.honeycomb-cell::before, .honeycomb-cell::after, .honeycomb-cell__image {
    top: -50%;
    left: 0;
    width: 100%;
    height: 200%;
    display: block;
    position: absolute;
    -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
            clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
    z-index: -1;
}

.honeycomb-cell::before {
    background: #fff;
    transform: scale(1.055);
}

.honeycomb-cell::after {
    background: #424242;
    opacity: 0.5;
    transition: opacity 350ms;
}

.honeycomb-cell.buffer::after {
    opacity: 0.0;
}

.honeycomb-cell:hover .honeycomb-cell__title {
    opacity: 0;
}

.honeycomb-cell:not(.buffer):hover::before {
    background: #414141;
}

.honeycomb-cell:hover::after {
    opacity: 0;
}

.honeycomb__placeholder {
    display: none;
    opacity: 0;
    width: 250px;
    margin: 0 12.5px;
}

@media only screen and (max-width: 600px) {
    .honeycomb-cell {
        flex: 0 1 250px;
        max-width: 29%;
        max-height: 145px;
        height: 18vw;
        margin: 5% 1% 25px;
        position: relative;
        padding: 0.5em;
        text-align: center;
        z-index: 1;
    }

    .honeycomb-cell.buffer {
        max-width: 11%! important;
    }

    .honeycomb-cell.mid-first {
        margin-left: 4.5%;
    }

    .honeycomb-cell.mid-last {
        margin-right: 4.5%;
    }
}

